pkg/commands/build/testdata/testcase-variable-ref-ingress/in/base/kustomization.yaml
apiVersion: v1beta1
kind: Kustomization
resources:
- deployment.yaml
- ingress.yaml
- service.yaml

vars:
- name: DEPLOYMENT_NAME
  objref:
    apiVersion: apps/v1
    kind: Deployment
    name: nginx
  fieldref:
    fieldpath: metadata.name
